--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,13 @@ h3{
 .rating span{
     margin : 0.1 rem;
 }
+
+h1{
+    padding: 0.1rem;
+    font-size: 1.8rem;
+}
+
+h2{
+    font-size: 1.4rem;
+    padding: 0.5rem;
+}
